# data_job

./: .gitignore  README.md  cli.py  config.yaml  full_assessment.md  future.md  main.py  makefile  project_review.md  pyproject.toml  run_pipeline.ps1  src - Shortcut.lnk
crawlers/: package-lock.json  package.json
crawlers/src/: list-crawler-multi.js  topcv-detail-crawler.js  topcv-list-crawler.js  topcv-text-crawler.js
crawlers/src/base/: browser.js  http.js  utils.js
crawlers/src/itviec/: detail_crawler.js  list_crawler.js
crawlers/src/topcv/: detail_crawler.js  list_crawler.js  text_crawler.js
crawlers/version_demo/: demo2.js  detail_crawler_itviet2.js  detail_crawler_itviet3.js  detail_crawler_itviet_main.js  list-crawler.js  list_crawler_itviet.js  list_crawler_itviet2_fixed.js.js  package-lock.json  package.json
crawlers/vesion_demo/: demo.js  main_v2.js  main_v3.js
dashboard/: app.py
data/bronze/itviec/: jobs_all.json  jobs_detail.json  jobs_detail1.json
data/bronze/topcv/: job_text_final.json  job_text_final1.json  jobs_all.json  jobs_all1.json  jobs_detail.json  jobs_detail1.json
data/gold/: heatmap_salary.parquet  location_distribution.parquet  metrics.parquet  salary_by_role.parquet  salary_by_seniority.parquet  skills_by_role.parquet  top_domains.parquet  top_skills.parquet  work_mode_distribution.parquet
docs/: data_dictionary.md
notebooks/: analyze_skills_frequency.ipynb  eda2.ipynb
transform/src/: main.py
transform/src/gold/: gold_builder.py
transform/src/io/: reader.py  source_normalizer.py  (+1 more)
transform/tests/: conftest.py
(+42 files in other folders)
